Fix tooltip behind typeahead bug for nba/wnba articles

--- a/css/wnba-season-history.css
+++ b/css/wnba-season-history.css
@@ -1108,7 +1108,7 @@ button.toggle:focus {
   background: #fff;
   font-size: 16px;
   border: 1px solid #ddd;
-  z-index: 10;
+  z-index: 10001;
   pointer-events: none;
   border-radius: 6px;
 }
